messaging channels, sending and deleting work perfectly with the backend. search is a bit wonky, but shouldn't be too long to fix. last thing to do is DMs.

--- a/frontend/src/TEMP.css
+++ b/frontend/src/TEMP.css
@@ -463,6 +463,10 @@
        flex-direction: column;
        align-items: center;
        justify-content: center;
+
+       max-height: 70vh; /* Set a fixed height for the popup container */
+       overflow-y: auto; /* Enable vertical scrolling */
+       justify-content: flex-start;
     
       /* Center the popup */
       /* position: absolute;
